--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "generate-function": "^2.0.0",
     "generate-object-property": "^1.2.0",
-    "protocol-buffers-schema": "^2.0.1",
+    "protocol-buffers-schema": "2.0.4-20160414T184947.git557a97d",
     "signed-varint": "^2.0.0",
     "brfs": "^1.4.0",
     "varint": "^4.0.0"
